# home-control

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  config.example.toml  pyproject.toml
.claude/skills/add-device/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/wrap-up/: SKILL.md
.githooks/: commit-msg
home_control/: __init__.py  app.py  config.py  layout.py  poller.py  ui.py
home_control/systems/: __init__.py  base.py  hue.py  midea.py  roku.py  router.py  sonos.py  yoto.py
home_control/voice/: __init__.py  controller.py  recognizer.py  router.py
tests/: test_config_ui.py  test_layout.py  test_midea.py  test_router.py  test_systems.py  test_toolbar.py  test_ui.py  test_voice.py
tools/: mdns_probe.py  midea_ping.py  roku_query.py  slider-test.py  ssdp_probe.py
