[project]
name = "home-control"
version = "0.1.0"
description = "Unified interface (TUI and voice mode) for controlling home devices (Hue, Roku, Sonos, router, Yoto, Midea...)"
requires-python = ">=3.10"
dependencies = [
    # Hue. httpx is needed for Hue v2 effects.
    "phue2>=0.0.4",
    "httpx>=0.27",
    # Sonos
    "soco>=0.30",
    "ytmusicapi>=1.7",
    # Voice control: NLU via the Claude API (tool-calling).
    "anthropic>=0.40",
    # Midea AC: local-LAN control via midea-local (import name `midealocal`),
    # the extracted core of the Home Assistant midea_ac_lan integration.
    "midea-local>=6.10.0",
    # midea-local imports typing_extensions.deprecated but doesn't declare it.
    "typing_extensions>=4",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest"]

[project.scripts]
home-control = "home_control.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["home_control"]

[tool.pyright]
include = ["home_control"]
# Resolve imports from the project venv (anthropic, soco, httpx, ...).
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"  # tomllib (config.py) is stdlib from 3.11
typeCheckingMode = "basic"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP"]
